# health-projects

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
src/health_projects.egg-info/: PKG-INFO  SOURCES.txt
src/liver_cirrhosis_prediction/: README.md  lc_data_prep.py
