[metadata]
name = health_projects
description = A variety of machine learning healthcare projects.
author = Dhruva Mambapoor

[options]
packages = 
    liver_cirrhosis_prediction
install_requires =
    xgboost >= 1.7.4
    pandas >= 1.5.2
    numpy >= 1.24.1
python_requires = >=3.10
package_dir = 
    =src
zip_safe = no